# advent-of-code

./: .gitignore  README.md  advent_of_code.ipynb  pyproject.toml  scratch.ipynb
inputs/: day1.csv  day3.txt
solutions/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
