[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["caleb sanders <caleb.p.sanders@lmco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
polars = "^1.16.0"
ipykernel = "^6.29.5"
numpy = "^2.1.3"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
